--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/AddWorkersFromAllWorkersListWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/AddWorkersFromAllWorkersListWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registration.WPF.Views"
         mc:Ignorable="d"
-        Title="AddWorkersFromAllWorkersListWindow" Height="305" Width="540" WindowStartupLocation="{StaticResource standartWindowStartupLocation}" Style="{StaticResource standartNoResize}">
+        Title="AddWorkersFromAllWorkersListWindow" Height="305" Width="700" WindowStartupLocation="{StaticResource standartWindowStartupLocation}" Style="{StaticResource standartNoResize}">
     <Window.Resources>
         <Style TargetType="Button" BasedOn="{StaticResource standartButton}"/>
         <Style TargetType="Label" BasedOn="{StaticResource standartLabel}"/>
@@ -16,28 +16,29 @@
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="13*"/>
-            <RowDefinition Height="106*"/>
-            <RowDefinition Height="19*"/>
+            <RowDefinition Height="27*"/>
+            <RowDefinition Height="211*"/>
+            <RowDefinition Height="38*"/>
         </Grid.RowDefinitions>
+
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="220*"/>
-            <ColumnDefinition Width="85*"/>
-            <ColumnDefinition Width="52*"/>
-            <ColumnDefinition Width="178*"/>
+            <ColumnDefinition Width="305*"/>
+            <ColumnDefinition Width="83*"/>
+            <ColumnDefinition Width="137*"/>
+            <ColumnDefinition Width="169*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="3">
+        <StackPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="2">
             <Label x:Name="labelOtherWorkers" Content="Other workers"/>
-            <ListBox x:Name="listOtherWorkers"  ItemsSource="{Binding NonSelectedWorkers}" SelectedItem="{Binding ReceiverForAdd}" TabIndex="0" Margin="3,0,-73,0"/>
+            <ListBox x:Name="listOtherWorkers"  ItemsSource="{Binding NonSelectedWorkers}" SelectedItem="{Binding ReceiverForAdd}" TabIndex="0" />
         </StackPanel>
 
-        <StackPanel Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="3">
+        <StackPanel Grid.Column="2" Grid.Row="0" Grid.RowSpan="2" Grid.ColumnSpan="2">
             <Label x:Name="labelReceivers" Content="Receivers" />
             <ListBox x:Name="listReceivers" ItemsSource="{Binding Path=SelectedWorkers}" SelectedItem="{Binding Path=ReceiverForDelete}" Grid.RowSpan="3" TabIndex="2"/>
         </StackPanel>
 
-        <StackPanel Grid.Column="1" Grid.Row="1">
+        <StackPanel Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2">
             <Button x:Name="btnAdd" Content="→" Command="{Binding Path=AddReceivers}" TabIndex="1" />
             <Button x:Name="btnDelete" Content="←" Command="{Binding Path=DeleteReceivers}" TabIndex="3"/>
         </StackPanel>
