--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/AuthorizationWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/AuthorizationWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:Controls="clr-namespace:Registration.WPF.Views.Controls" x:Class="Registration.WPF.Views.AuthorizationWindow"
         mc:Ignorable="d"
         x:Name="AuthorizationWindowName"    
-        Title="AuthorizationWindow" Height="160" Width="215" WindowStartupLocation="{StaticResource standartWindowStartupLocation}" Style="{StaticResource standartNoResize}">
+        Title="AuthorizationWindow" Height="160" Width="215" WindowStartupLocation="{StaticResource standartWindowStartupLocation}" Style="{StaticResource standartNoResize}" Closed="AuthorizationWindowName_Closed">
     
     <Window.Resources>
         <Style TargetType="Button" BasedOn="{StaticResource standartButton}"/>
@@ -23,7 +23,7 @@
         <Controls:AuthorizationControl HorizontalAlignment="Left" TabIndex="0" Grid.Row="0" />
 
         <StackPanel Grid.Row="1" Orientation="Horizontal">
-            <Button x:Name="btnSignIn" IsDefault="True" Content="SignIn" Command="{Binding SignInCommand, Mode=OneWay}" CommandParameter="{Binding ElementName=AuthorizationWindowName}" TabIndex="4"/>
+            <Button x:Name="btnSignIn" IsDefault="True" Content="SignIn" Command="{Binding SignInCommand, Mode=OneWay}" CommandParameter="{Binding ElementName=AuthorizationWindowName}" TabIndex="4" Click="btnSignIn_Click"/>
             <Button x:Name="btnSignUp" Content="SignUp" Command="{Binding SignUpCommand}" CommandParameter="{Binding ElementName=AuthorizationWindowName}" TabIndex="5"/>
         </StackPanel>
 
