fixed bug in method for create letter with repeated receivers

--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/WorkersEditorControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/WorkersEditorControl.xaml
@@ -46,6 +46,13 @@
                     <KeyBinding Command="{Binding Path=AddWorker}" Key="Enter" 
                             CommandParameter="{Binding ElementName=listWorkers, Path=SelectedValue}"/>
                 </ListBox.InputBindings>
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseDoubleClick">
+                        <i:InvokeCommandAction
+                           Command="{Binding Path=AddWorker}"
+                CommandParameter="{Binding ElementName=listWorkers, Path=SelectedValue}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
             </ListBox>
 
         </StackPanel>
