--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/MakeLetterWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/MakeLetterWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registration.WPF.Views"
         mc:Ignorable="d"
+        x:Name="makeLetterWindow"
         Title="MakeLetterWindow" MinHeight="500" MinWidth="500" Height="580" Width="559" WindowStartupLocation="{StaticResource standartWindowStartupLocation}" Style="{StaticResource standartWindow}">
     <Window.Resources>
         <Style TargetType="Button" BasedOn="{StaticResource standartButton}"/>
@@ -19,7 +20,7 @@
         <StackPanel x:Name="stackPanel" Grid.Row="0" Margin="3" />
         
         <StackPanel Orientation="Horizontal" Grid.Row="1">
-            <Button x:Name="buttonSend" Content="Send" Command="{Binding Path=SendLetterClick}" Click="SendButton_Click" Grid.Row="1" TabIndex="6"/>
+            <Button x:Name="buttonSend" Content="Send" Command="{Binding Path=SendLetterClick}" CommandParameter="{Binding ElementName=makeLetterWindow}" MouseUp="SendButton_Click" Grid.Row="1" TabIndex="6"/>
             <Button x:Name="buttonCancel" IsCancel="true" Content="Cancel" TabIndex="7" />           
         </StackPanel>
 
