--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/AddWorkersFromAllWorkersListWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/AddWorkersFromAllWorkersListWindow.xaml
@@ -40,7 +40,7 @@
 
         <StackPanel Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2">
             <Button x:Name="btnAdd" Content="→" Command="{Binding Path=AddReceivers}" TabIndex="1" Click="btnAdd_Click" />
-            <Button x:Name="btnDelete" Content="←" Command="{Binding Path=DeleteReceivers}" TabIndex="3"/>
+            <Button x:Name="btnDelete" Content="←" Command="{Binding Path=DeleteReceivers}" TabIndex="3" Click="btnDelete_Click"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="2">
